<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_running_edit_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:text="24:05" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/date_running_edit_text"
        app:layout_constraintTop_toBottomOf="@id/text_input_record">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:text="17th October 2023" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/save_running_button"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintTop_toBottomOf="@id/text_input_date" />

    <Button
        android:id="@+id/button_clear"
        style="out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/clear_running_button"
        app:layout_constraintTop_toBottomOf="@id/button_save" />
</androidx.constraintlayout.widget.ConstraintLayout>